data/all_generated_tests/raw_wast_tests/if_InfiniteLoops_1541.wast
;; 2. **Test Description**: An `if` block inside a `loop`, where the conditional evaluates a stack operand but includes an incorrect usage of labeled branches to exit multiple control structures.    **Constraint Checked**: Verifies correct handling of labeled branching and validation of stack operand usage.    **Relation to Infinite Loops**: If the labels or operand stack are mismanaged, the intended loop exit may fail, causing an infinite loop.

(assert_invalid
  (module
    (func (result i32)
      (local i32)
      (loop $loop
        (if (i32.eqz (local.get 0))
          (then
            (br $loop)
          )
          (else
            (block $block
              (if (i32.eqz (local.get 0))
                (then
                  (br $loop $block)
                )
                (else
                  (loop $inner
                    (br $block)
                  )
                )
              )
            )
          )
        )
      )
      (i32.const 1)
    )
  )
  "type mismatch"
)